Printed cards/leaflets available now

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								</a>
 								<div class="caption">
 									<h3 class="text-center">Action Group Info</h3>
-									<p class="text-center">Look out for printed leaflets available soon.<br><br></p>
+									<p class="text-center">Printed leaflets are now available.<br><br></p>
 									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#leaflet">View</a></p>
 								</div>
 							</div>
@@ -109,7 +109,7 @@
 								</a>
 								<div class="caption">
 									<h3 class="text-center">Local and Social Groups in Ringwood</h3>
-									<p class="text-center">Look out for printed cards available soon.</p>
+									<p class="text-center">Printed cards are now available.</p>
 									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#socialGroups">View</a></p>
 								</div>
 							</div>
