Updated number of Dementia Friends

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<div class="caption">
 									<h3 class="text-center">Press Release</h3>
 									<p class="text-center">Town Councilors lead the way to make Ringwood and Bransgore a Dementia Friendly Community.</p>
-									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#pressRelease">View</a></p>
+									<p class="t2ext-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#pressRelease">View</a></p>
 								</div>
 							</div>
 						</div>
@@ -121,7 +121,7 @@
 								</a>
 								<div class="caption">
 									<h3 class="text-center">More News</h3>
-									<p class="text-center">276 Dementia Friends locally! Businesses sign up to become dementia friendly.</p>
+									<p class="text-center">321 Dementia Friends locally! Businesses sign up to become dementia friendly.</p>
 									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#moreNews">View</a></p>
 								</div>
 							</div>
@@ -224,7 +224,7 @@
 					<div class="modal-body">
 						<h2 class="text-center">Dementia Friendly Ringwood and Bransgore Communities</h2>
 						<p>The local action team would like to extend thanks to all who supported the Dementia Friendly Ringwood event at Greyfriars Community Centre.  It proved to be an informative and imaginative day of sharing resources and experience.</p>
-						<p>The local people are responding to find ways of improving the quality of life for people living with dementia.  In Ringwood and Bransgore, 276 people have become Dementia Friends since February.  This raises the levels of awareness and understanding in the community, so that people with a diagnosis of dementia feel supported and are encouraged to continue, to lead active and independent lives.</p>
+						<p>The local people are responding to find ways of improving the quality of life for people living with dementia.  In Ringwood and Bransgore, 321 people have become Dementia Friends since February.  This raises the levels of awareness and understanding in the community, so that people with a diagnosis of dementia feel supported and are encouraged to continue, to lead active and independent lives.</p>
 						<p>Businesses and services, local shops and organisations are the next stage in the plan to help create a Dementia Friendly environment.  They are signing up to the Hampshire Dementia Action Alliance, forming action plans and committing to become Dementia Friendly.  Small changes to attitude and customer service along with practical ideas, will make life easier for people with dementia and their carers.</p>
 						<p>We look forward to the Launch event in the Autumn, to celebrate those in the community who will be the first to qualify for the status of “Working to become Dementia Friendly” in both Ringwood and Bransgore.</p>
 					</div>
