--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="col-md-10 col-md-offset-1">
 					<h2>Who we are</h2>
 					<p>We are a volunteer group committed to developing Ringwood, Bransgore and the surrounding area as a Dementia Friendly Community.</p>
-					<p>We seek to improve services through awareness and understanding and as a community, we can make life better for people living with dementia. We can show how it is good for everyone and a benefit to all.</p>
+					<p>We are keen to improve services through awareness and understanding within the community. As a volunteer action group we are committed to creating an environment that offers the best possible opportunity for people to live well with dementia.</p>
 					<br>
 					<h2 class="blue">Dementia Friends Information Sessions</h2>
 					<h3>Ringwood</h3>
@@ -98,7 +98,19 @@
 								<div class="caption">
 									<h3 class="text-center">Press Release</h3>
 									<p class="text-center">Town Councilors lead the way to make Ringwood and Bransgore a Dementia Friendly Community.</p>
-									<p class="t2ext-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#pressRelease">View</a></p>
+									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#pressRelease">View</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="thumb col-sm-3 col-md-3 col-xs-12">
+							<div class="thumbnail">
+								<a href="#" data-toggle="modal" data-target="#latestNews" class="thumbnail no-mb">
+									<img src="img/moreNews.jpg" alt="Latest News">
+								</a>
+								<div class="caption">
+									<h3 class="text-center">Latest News</h3>
+									<p class="text-center">Ringwood & Bransgore communities are gathering momentum</p>
+									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#latestNews">View</a></p>
 								</div>
 							</div>
 						</div>
@@ -111,18 +123,6 @@
 									<h3 class="text-center">Local and Social Groups in Ringwood</h3>
 									<p class="text-center">Printed cards are now available.</p>
 									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#socialGroups">View</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="thumb col-sm-3 col-md-3 col-xs-12">
-							<div class="thumbnail">
-								<a href="#" data-toggle="modal" data-target="#moreNews" class="thumbnail no-mb">
-									<img src="img/moreNews.jpg" alt="More News">
-								</a>
-								<div class="caption">
-									<h3 class="text-center">More News</h3>
-									<p class="text-center">321 Dementia Friends locally! Businesses sign up to become dementia friendly.</p>
-									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#moreNews">View</a></p>
 								</div>
 							</div>
 						</div>
@@ -231,6 +231,22 @@
 				</div>
 			</div>
 		</div>
+		<div id="latestNews" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title">Latest News</h4>
+					</div>
+					<div class="modal-body">
+						<h2 class="text-center">Dementia Friendly Ringwood & Bransgore communities are gathering momentum</h2>
+						<br>
+						<p>Local people are responding to find ways of improving the quality of life for people living with dementia and their carers.  Since February, there are now over 342 local people who have become Dementia Friends, raising awareness and understanding throughout the community.  Businesses and services, local shops and organisations are forming action plans and committing to become Dementia Friendly.  Small changes to attitude and customer service, along with practical ideas, will help and encourage people with dementia to engage in community life.   Whether shopping, finding transport or simply being able to continue to pursue interests and activities with confidence - life will be made easier.</p>
+						<p>As a volunteer action group we are committed to creating  an environment that offers the best possible opportunity for people to live well with dementia.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div id="leaflet" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
@@ -303,6 +319,18 @@
 											<h3 class="text-center">Spotlight Event</h3>
 											<p class="text-center">Visit our Spotlight Event at Greyfriars Community Centre on Friday 22nd May</p>
 											<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#spotlightEvent">View</a></p>
+										</div>
+									</div>
+								</div>
+								<div class="thumb col-sm-4 col-md-4 col-xs-12">
+									<div class="thumbnail">
+										<a href="#" data-toggle="modal" data-target="#moreNews" class="thumbnail no-mb">
+											<img src="img/moreNews.jpg" alt="More News">
+										</a>
+										<div class="caption">
+											<h3 class="text-center">More News</h3>
+											<p class="text-center">321 Dementia Friends locally! Businesses sign up to become dementia friendly.</p>
+											<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#moreNews">View</a></p>
 										</div>
 									</div>
 								</div>
