Added info session

--- a/index.html
+++ b/index.html
@@ -36,17 +36,20 @@
 					<br>
 					<h2 class="blue">Dementia Friends Information Sessions</h2>
 					<h3>Ringwood</h3>
-					<p><b>Venue:</b> Lesley Errington Hall, Stillwater Park, North Poulner Road, Ringwood, BH24 3JZ. <a href="http://goo.gl/forms/BSzJDOiUVs" target="_blank">Click here to book</a> or contact us.</p>
-					<table class="table table-hover" style="width: 380px">
+					<p><b>Venue:</b> Lesley Errington Hall, Stillwater Park, North Poulner Road, Ringwood, BH24 3JZ.</p>
+					<p>Contact us to book (Bottom of page).</p>
+					<table class="table table-hover">
 						<tr>
 							<th>Date</th>
 							<th class="text-center">Session</th>
-							<th class="text-center">Session</th>
 						</tr>
 						<tr>
-							<td>Coming soon.</td>
-							<td class="text-center"></td>
-							<td class="text-center"></td>
+							<td>Friday 11th September</td>
+							<td class="text-center">10.30am</td>
+						</tr>
+						<tr>
+							<td>Wednesday 16th September</td>
+							<td class="text-center">1.30pm</td>
 						</tr>
 					</table>
 					<br>
