--- a/index.html
+++ b/index.html
@@ -34,25 +34,19 @@
 					<p>We are a volunteer group committed to developing Ringwood, Bransgore and the surrounding area as a Dementia Friendly Community.</p>
 					<p>We are keen to improve services through awareness and understanding within the community. As a volunteer action group we are committed to creating an environment that offers the best possible opportunity for people to live well with dementia.</p>
 					<br>
-					<h2 class="blue">Dementia Friends Information Sessions</h2>
-					<h3>Ringwood</h3>
-					<p><b>Venue:</b> Lesley Errington Hall, Stillwater Park, North Poulner Road, Ringwood, BH24 3JZ.</p>
-					<p>Contact us to book (Bottom of page).</p>
-					<table class="table table-hover">
-						<tr>
-							<th>Date</th>
-							<th class="text-center">Session</th>
-						</tr>
-						<tr>
-							<td>Friday 11th September</td>
-							<td class="text-center">10.30am</td>
-						</tr>
-						<tr>
-							<td>Wednesday 16th September</td>
-							<td class="text-center">1.30pm</td>
-						</tr>
-					</table>
-					<br>
+					<div style="display: none;">
+						<h2 class="blue">Dementia Friends Information Sessions</h2>
+						<h3>Ringwood</h3>
+						<p><b>Venue:</b> Lesley Errington Hall, Stillwater Park, North Poulner Road, Ringwood, BH24 3JZ.</p>
+						<p>Contact us to book (Bottom of page).</p>
+						<table class="table table-hover">
+							<tr>
+								<th>Date</th>
+								<th class="text-center">Session</th>
+							</tr>
+						</table>
+						<br>
+					</div>
 					<div class="row container-fluid">
 						<div class="thumb col-sm-4 col-md-4 col-xs-12">
 							<div class="thumbnail">
@@ -95,25 +89,25 @@
 					<div class="row container-fluid">
 						<div class="thumb col-sm-3 col-md-3 col-xs-12">
 							<div class="thumbnail">
-								<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-mb">
-									<img src="img/pressRelease.jpg" alt="...">
+								<a href="#" data-toggle="modal" data-target="#celebrationNews" class="thumbnail no-mb">
+									<img src="img/celebrationNews.jpg" alt="Celebration News">
 								</a>
 								<div class="caption">
-									<h3 class="text-center">Press Release</h3>
-									<p class="text-center">Town Councilors lead the way to make Ringwood and Bransgore a Dementia Friendly Community.</p>
-									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#pressRelease">View</a></p>
+									<h3 class="text-center">Celebration News</h3>
+									<p class="text-center">Local Communities Unite in Becoming Dementia Friendly</p>
+									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#celebrationNews">View</a></p>
 								</div>
 							</div>
 						</div>
 						<div class="thumb col-sm-3 col-md-3 col-xs-12">
 							<div class="thumbnail">
-								<a href="#" data-toggle="modal" data-target="#latestNews" class="thumbnail no-mb">
-									<img src="img/moreNews.jpg" alt="Latest News">
+								<a href="#" data-toggle="modal" data-target="#encouragingEnabling" class="thumbnail no-mb">
+									<img src="img/launchEventNamesThumb.jpg" alt="">
 								</a>
 								<div class="caption">
-									<h3 class="text-center">Latest News</h3>
-									<p class="text-center">Ringwood & Bransgore communities are gathering momentum</p>
-									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#latestNews">View</a></p>
+									<h3 class="text-center">Encouraging & Enabling</h3>
+									<p class="text-center">Enabling People with Dementia to Engage in the Community</p>
+									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#encouragingEnabling">View</a></p>
 								</div>
 							</div>
 						</div>
@@ -157,6 +151,37 @@
 		</footer>
 		
 		<!-- Modals -->
+		<div id="celebrationNews" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title">Local Communities Unite</h4>
+					</div>
+					<div class="modal-body">
+						<h2 class="text-center blue">Local Communities Unite in Becoming Dementia Friendly</h2>
+						<p>A celebration with a difference has recently taken place at Greyfriars Community Centre in Ringwood - the Launch of Dementia Friendly Ringwood & Bransgore. This recognised the very first local businesses and organisations to join the Dementia Friends social movement and the Hampshire Dementia Action Alliance, responding to the needs of people with dementia.</p>
+						<p>The Mayor of Ringwood, Town Councillor Thierry, and the Chairman of Bransgore Parish Council, Mike Manley, made the presentations both echoing the same message "We can all make a difference".</p>
+						<p>Dementia Friends is a national initiative of the Cabinet and the Alzheimer's Society in response to the Prime Minister's challenge on dementia. Its aim is simple..... to increase dementia awareness and understanding and to change the way the nation thinks, talks and acts about dementia.</p>
+						<p>An impressive 350 local people have become Dementia Friends, and the local businesses and organisations are now helping to encourage and enable people with dementia to engage in the community. Whether shopping, finding transport or simply being able to continue to pursue interests and activities with confidence, life will be made easier.</p>
+						<p>The first local members of Dementia Friendly Hampshire will prominently display dementia friendly welcome stickers in premises throughout the communities of Ringwood and Bransgore. More will follow. Look for the three forget-me-nots and the understanding, supportive people who have decided to act and make a difference!</p>	
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="encouragingEnabling" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title"> Encouraging & Enabling</h4>
+					</div>
+					<div class="modal-body">
+						<img src="img/launchEventNames.jpg" class="img-responsive" alt="Launch Event Names">
+					</div>
+				</div>
+			</div>
+		</div>
 		<div id="communities" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
@@ -334,6 +359,32 @@
 											<h3 class="text-center">More News</h3>
 											<p class="text-center">321 Dementia Friends locally! Businesses sign up to become dementia friendly.</p>
 											<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#moreNews">View</a></p>
+										</div>
+									</div>
+								</div>
+								<div class="thumb col-sm-4 col-md-4 col-xs-12">
+									<div class="thumbnail">
+										<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-mb">
+											<img src="img/pressRelease.jpg" alt="...">
+										</a>
+										<div class="caption">
+											<h3 class="text-center">Press Release</h3>
+											<p class="text-center">Town Councilors lead the way to make Ringwood and Bransgore a Dementia Friendly Community.</p>
+											<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#pressRelease">View</a></p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row-fluid">
+								<div class="thumb col-sm-4 col-md-4 col-xs-12">
+									<div class="thumbnail">
+										<a href="#" data-toggle="modal" data-target="#latestNews" class="thumbnail no-mb">
+											<img src="img/moreNews.jpg" alt="Latest News">
+										</a>
+										<div class="caption">
+											<h3 class="text-center">Latest News</h3>
+											<p class="text-center">Ringwood & Bransgore communities are gathering momentum</p>
+											<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#latestNews">View</a></p>
 										</div>
 									</div>
 								</div>
