--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 		<meta name="description" content="A volunteer group committed to developing Ringwood, Bransgore and the surrounding area as a Dementia Friendly Community.">
 		<meta name="keywords" content="Ringwood,Bransgore,Dementia,Action,Group">
 		<meta name="author" content="Craig Allardyce">
-		
+
 		<title>Dementia Action Group - Ringwood and Bransgore</title>
-		
+
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		
+
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-				
+
+
 	</head>
 
 	<body>
@@ -85,7 +85,7 @@
 							</div>
 						</div>
 					</div>
-					
+
 					<div class="row container-fluid">
 						<div class="thumb col-sm-3 col-md-3 col-xs-12">
 							<div class="thumbnail">
@@ -117,8 +117,8 @@
 									<img src="img/socialGroups.jpg" alt="Social Groups">
 								</a>
 								<div class="caption">
-									<h3 class="text-center">Local and Social Groups in Ringwood</h3>
-									<p class="text-center">Printed cards are now available.</p>
+									<h3 class="text-center">Local and Social Groups</h3>
+									<p class="text-center">Groups found in Ringwood and Bransgore.</p>
 									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#socialGroups">View</a></p>
 								</div>
 							</div>
@@ -134,12 +134,12 @@
 									<p class="text-center"><a href="#" class="btn btn-primary btn-success" data-toggle="modal" data-target="#archive">Go</a></p>
 								</div>
 							</div>
-						</div>		
+						</div>
 					</div>
 
 					<h2>Contact Us</h2>
 					<p class="contact"><strong>Sue Scott</strong> - Tel <code>01202 986179</code> or email <code><a href="mailto:suescott@talktalk.net" class="code">suescott@talktalk.net</a></code></p>
-					<p class="contact"><strong>Krista Allardyce</strong> - Tel <code>01425 483117</code> or email <code><a href="mailto:kristaallardyce@hotmail.com" class="code">kristaallardyce@hotmail.com</a></code></p>			
+					<p class="contact"><strong>Krista Allardyce</strong> - Tel <code>01425 483117</code> or email <code><a href="mailto:kristaallardyce@hotmail.com" class="code">kristaallardyce@hotmail.com</a></code></p>
 
 				</div>
 			</div>
@@ -149,7 +149,7 @@
 				&copy; 2015 Ringwood and Bransgore Dementia Action Group
 			</small>
 		</footer>
-		
+
 		<!-- Modals -->
 		<div id="celebrationNews" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
@@ -164,7 +164,7 @@
 						<p>The Mayor of Ringwood, Town Councillor Thierry, and the Chairman of Bransgore Parish Council, Mike Manley, made the presentations both echoing the same message "We can all make a difference".</p>
 						<p>Dementia Friends is a national initiative of the Cabinet and the Alzheimer's Society in response to the Prime Minister's challenge on dementia. Its aim is simple..... to increase dementia awareness and understanding and to change the way the nation thinks, talks and acts about dementia.</p>
 						<p>An impressive 350 local people have become Dementia Friends, and the local businesses and organisations are now helping to encourage and enable people with dementia to engage in the community. Whether shopping, finding transport or simply being able to continue to pursue interests and activities with confidence, life will be made easier.</p>
-						<p>The first local members of Dementia Friendly Hampshire will prominently display dementia friendly welcome stickers in premises throughout the communities of Ringwood and Bransgore. More will follow. Look for the three forget-me-nots and the understanding, supportive people who have decided to act and make a difference!</p>	
+						<p>The first local members of Dementia Friendly Hampshire will prominently display dementia friendly welcome stickers in premises throughout the communities of Ringwood and Bransgore. More will follow. Look for the three forget-me-nots and the understanding, supportive people who have decided to act and make a difference!</p>
 					</div>
 				</div>
 			</div>
@@ -221,8 +221,8 @@
 						<p>By becoming Dementia Friends, Councillors of Ringwood and Bransgore, Police, local people and community groups have taken the first steps towards making both communities Dementia Friendly. So far, over a hundred people have attended a 45 minute session that gives them an awareness and understanding of those who live with dementia. It is hugely reassuring for people with dementia, to feel able to go out and about and continue to do the everyday things most people take for granted, knowing that their needs within the community will be understood and supported.</p>
 						<p>Dementia Friendly High Streets are being set up by Dementia Action Groups throughout the country. Businesses, services, and organisations are involved, and able to respond to customers by creating an environment that offers the best possible opportunity for people to live well with dementia. <strong>This will also benefit the disabled, those with mental health concerns, as well as older people living within the community.</strong></p>
 						<p>Ringwood and Bransgore Dementia Action Group invites you to become a Dementia Friend, so that people living with dementia can feel confident and able to continue their lives, their interests and activities, because they live in a Dementia Friendly Community.</p>
-						<p>To become a Dementia Friend, or if you wish to join the Action Group please contact 
-						<br><strong>Sue Scott</strong> - Tel <code>01202 986179</code>, Email <code>suescott@talktalk.net</code> or 
+						<p>To become a Dementia Friend, or if you wish to join the Action Group please contact
+						<br><strong>Sue Scott</strong> - Tel <code>01202 986179</code>, Email <code>suescott@talktalk.net</code> or
 						<br><strong>Krista Allardyce</strong> - Tel <code>01425 483117</code>, Email <code>kristaallardyce@hotmail.com</code></p>
 						<p>Free information sessions will be held regularly at the Lesley Errington Hall, Stillwater Park, North Poulner Road. Ringwood. BH24 3JZ</p>
 					</div>
@@ -394,7 +394,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div id="socialGroups" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
@@ -442,22 +442,6 @@
 							</tr>
 							<tr>
 								<td>
-									<h3>Reminiscence Group</h3>
-									Trinity Centre,<br>
-									Christchurch Road,<br>
-									BH24 1DY<br>
-								</td>
-								<td class="v-center">
-									2nd & 4th Mon.<br>
-									10:30am - 12pm
-								</td>
-								<td class="v-center">
-									<b>Alzheimers Society</b><br>
-									01590 644679
-								</td>
-							</tr>
-							<tr>
-								<td>
 									<h3>Art Group</h3>
 									Trinity Centre,<br>
 									Christchurch Road,<br>
@@ -470,7 +454,7 @@
 								<td class="v-center">
 									<b>Alzheimers Society</b><br>
 									Please book<br>
-									Gilda : 01725 513334
+									Gilda : 01425 473076
 								</td>
 							</tr>
 							<tr>
@@ -484,7 +468,23 @@
 								<td class="v-center">
 									<b>Avon Valley Dementia Pals</b><br>
 									Alan : 01725 518537<br>
-									Edward : 01725 513334
+									Edward : 01425 473076
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<h3>Coffee Morning</h3>
+									The Crown Pub,<br>
+									Bransgore,<br>
+									BH23 8AA
+								</td>
+								<td class="v-center">
+									1st Mon.<br>
+									11am - 12:30pm
+								</td>
+								<td class="v-center">
+									<b>Dementia Friendly</b><br>
+									Sue : 07775 908330<br>
 								</td>
 							</tr>
 						</table>
@@ -500,14 +500,13 @@
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-			
+
 			ga('create', 'UA-61944834-1', 'auto');
 			ga('send', 'pageview');
-			
+
 			$('.modal').click(function() {
 				$(this).modal('hide');
 			});
 		</script>
 	</body>
 </html>
-
