--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				</div>
 
 				<h2>Contact Us</h2>
-				<p class="contact"><strong>Sue Scott</strong> - Tel <code>01202 986179</code> or email <code><a href="mailto:suescott@talktalk.net" class="code">suescott@talktalk.net</a></code></p>
+				<p class="contact"><strong>Sue Scott</strong> - Tel <code>01202 986179</code> or email <code><a href="mailto:sue@walking-on-sunshine.com" class="code">sue@walking-on-sunshine.com</a></code></p>
 				<p class="contact"><strong>Krista Allardyce</strong> - Tel <code>01425 483117</code> or email <code><a href="mailto:kristaallardyce@hotmail.com" class="code">kristaallardyce@hotmail.com</a></code></p>
 
 			</div>
@@ -146,7 +146,7 @@
 	</div>
 	<footer>
 		<small>
-			&copy; 2015 Ringwood and Bransgore Dementia Action Group
+			&copy; 2016 Ringwood and Bransgore Dementia Action Group
 		</small>
 	</footer>
 
@@ -222,7 +222,7 @@
 					<p>Dementia Friendly High Streets are being set up by Dementia Action Groups throughout the country. Businesses, services, and organisations are involved, and able to respond to customers by creating an environment that offers the best possible opportunity for people to live well with dementia. <strong>This will also benefit the disabled, those with mental health concerns, as well as older people living within the community.</strong></p>
 					<p>Ringwood and Bransgore Dementia Action Group invites you to become a Dementia Friend, so that people living with dementia can feel confident and able to continue their lives, their interests and activities, because they live in a Dementia Friendly Community.</p>
 					<p>To become a Dementia Friend, or if you wish to join the Action Group please contact
-						<br><strong>Sue Scott</strong> - Tel <code>01202 986179</code>, Email <code>suescott@talktalk.net</code> or
+						<br><strong>Sue Scott</strong> - Tel <code>01202 986179</code>, Email <code>sue@walking-on-sunshine.com</code> or
 						<br><strong>Krista Allardyce</strong> - Tel <code>01425 483117</code>, Email <code>kristaallardyce@hotmail.com</code></p>
 						<p>Free information sessions will be held regularly at the Lesley Errington Hall, Stillwater Park, North Poulner Road. Ringwood. BH24 3JZ</p>
 					</div>
@@ -474,12 +474,13 @@
 								<tr>
 									<td>
 										<h3>Morning Coffee</h3>
-										The Crown Pub,<br>
+										The Crown Inn,<br>
 										Bransgore,<br>
 										BH23 8AA
 									</td>
 									<td class="v-center">
-										1st Mon.<br>
+										Delayed until April<br>
+										Watch for posters in the village<br>
 										11am - 12:30pm
 									</td>
 									<td class="v-center">
