--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 							<h4 class="modal-title">Local and Social Groups</h4>
 						</div>
 						<div class="modal-body">
-							<h3 class="orange">Local and Social Groups</h3>
+							<h3 class="orange">Local and Social Groups - Each Month</h3>
 							<br>
 							<table class="table table-hover table-bordered">
 								<tr>
@@ -479,8 +479,7 @@
 										BH23 8AA
 									</td>
 									<td class="v-center">
-										Delayed until April<br>
-										Watch for posters in the village<br>
+										1st Mon.<br>
 										11am - 12:30pm
 									</td>
 									<td class="v-center">
