--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
 				<h2>Contact Us</h2>
 				<p class="contact"><strong>Sue Scott</strong> - Tel <code>01202 986179</code> or email <code><a href="mailto:sue@walking-on-sunshine.com" class="code">sue@walking-on-sunshine.com</a></code></p>
 				<p class="contact"><strong>Krista Allardyce</strong> - Tel <code>01425 483117</code> or email <code><a href="mailto:kristaallardyce@hotmail.com" class="code">kristaallardyce@hotmail.com</a></code></p>
+				<hr>
+				<p class="contact"><strong>Facebook</strong> - <code><a href="https://www.facebook.com/ringwooddementia/" class="code" target="_blank">Ringwood & Bransgore Dementia Action Group</a></code></p>
+				<p class="contact"><strong>Twitter</strong> - <code><a href="https://twitter.com/rbdementia" class="code" target="_blank">@rbdementia</a></code></p>
 
 			</div>
 		</div>
