--- a/index.html
+++ b/index.html
@@ -85,7 +85,18 @@
 						</div>
 					</div>
 				</div>
-
+				<div class="thumb col-sm-3 col-md-3 col-xs-12">
+					<div class="thumbnail">
+						<a href="#" data-toggle="modal" data-target="#volunteersWanted" class="thumbnail no-mb">
+							<img src="img/volunteersWantedThumb.png" alt="">
+						</a>
+						<div class="caption">
+							<h3 class="text-center">Volunteers Wanted</h3>
+							<p class="text-center">We need to expand our group to be able to do more!</p>
+							<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#volunteersWanted">View</a></p>
+						</div>
+					</div>
+				</div>
 				<div class="row container-fluid">
 					<div class="thumb col-sm-3 col-md-3 col-xs-12">
 						<div class="thumbnail">
@@ -99,18 +110,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="thumb col-sm-3 col-md-3 col-xs-12">
-						<div class="thumbnail">
-							<a href="#" data-toggle="modal" data-target="#encouragingEnabling" class="thumbnail no-mb">
-								<img src="img/launchEventNamesThumb.jpg" alt="">
-							</a>
-							<div class="caption">
-								<h3 class="text-center">Encouraging & Enabling</h3>
-								<p class="text-center">Enabling People with Dementia to Engage in the Community</p>
-								<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#encouragingEnabling">View</a></p>
-							</div>
-						</div>
-					</div>
+
 					<div class="thumb col-sm-3 col-md-3 col-xs-12">
 						<div class="thumbnail">
 							<a href="#" data-toggle="modal" data-target="#socialGroups" class="thumbnail no-mb">
@@ -172,7 +172,19 @@
 			</div>
 		</div>
 	</div>
-	<div id="encouragingEnabling" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+	<div id="volunteersWanted" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title">Volunteers Wanted</h4>
+				</div>
+				<div class="modal-body" style="text-align: center;">
+					<img src="img/volunteersWanted.png" class="img-responsive" style="display: inline-block;" alt="Volunteers Wanted">
+				</div>
+			</div>
+		</div>
+	</div>	<div id="encouragingEnabling" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -331,6 +343,7 @@
 					</div>
 				</div>
 			</div>
+			<!--Archive-->
 			<div id="archive" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-content">
@@ -341,6 +354,18 @@
 						<div class="modal-body">
 							<div class="container-fluid">
 								<div class="row-fluid">
+									<div class="thumb col-sm-3 col-md-3 col-xs-12">
+										<div class="thumbnail">
+											<a href="#" data-toggle="modal" data-target="#encouragingEnabling" class="thumbnail no-mb">
+												<img src="img/launchEventNamesThumb.jpg" alt="">
+											</a>
+											<div class="caption">
+												<h3 class="text-center">Encouraging & Enabling</h3>
+												<p class="text-center">Enabling People with Dementia to Engage in the Community</p>
+												<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#encouragingEnabling">View</a></p>
+											</div>
+										</div>
+									</div>
 									<div class="thumb col-sm-4 col-md-4 col-xs-12">
 										<div class="thumbnail">
 											<a href="#" data-toggle="modal" data-target="#spotlightEvent" class="thumbnail no-mb">
@@ -515,17 +540,17 @@
 			<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 			<script type="text/javascript" src="js/bootstrap.min.js"></script>
 			<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+					(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+					m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+				})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-			ga('create', 'UA-61944834-1', 'auto');
-			ga('send', 'pageview');
+				ga('create', 'UA-61944834-1', 'auto');
+				ga('send', 'pageview');
 
-			$('.modal').click(function() {
-				$(this).modal('hide');
-			});
+				$('.modal').click(function() {
+					$(this).modal('hide');
+				});
 			</script>
 		</body>
 		</html>
