Updated contact details

--- a/index.html
+++ b/index.html
@@ -476,13 +476,13 @@
 										BH24 1DY<br>
 									</td>
 									<td class="v-center">
-										2nd & 4th Tues.<br>
+										2nd & 4th Thurs.<br>
 										10am - 12pm
 									</td>
 									<td class="v-center">
 										<b>Alzheimers Society</b><br>
 										Please book<br>
-										Gilda : 01425 473076
+										Gilda : : 01425 473777
 									</td>
 								</tr>
 								<tr>
@@ -490,13 +490,13 @@
 										<h3>Men's Walking Group</h3>
 									</td>
 									<td class="v-center">
-										1st & 3rd Tues.<br>
+										1st & 3rd Tues. 2pm<br>
 										Afternoons
 									</td>
 									<td class="v-center">
 										<b>Avon Valley Dementia Pals</b><br>
 										Alan : 01725 518537<br>
-										Edward : 01425 473076
+										Edward : : 01425 473777
 									</td>
 								</tr>
 								<tr>
