Updated phone numbers

--- a/index.html
+++ b/index.html
@@ -447,7 +447,8 @@
 									</td>
 									<td class="v-center">
 										<b>Alzheimers Society</b><br>
-										Dawn : 01590 644679
+										Nicki : 02380 610159
+										Mobile : 07860 912272
 									</td>
 								</tr>
 								<tr>
@@ -482,7 +483,7 @@
 									<td class="v-center">
 										<b>Alzheimers Society</b><br>
 										Please book<br>
-										Gilda : : 01425 473777
+										Gilda : 01425 473777
 									</td>
 								</tr>
 								<tr>
@@ -496,7 +497,7 @@
 									<td class="v-center">
 										<b>Avon Valley Dementia Pals</b><br>
 										Alan : 01725 518537<br>
-										Edward : : 01425 473777
+										Edward : 01425 473777
 									</td>
 								</tr>
 								<tr>
@@ -531,6 +532,38 @@
 										07980 434195<br>
 									</td>
 								</tr>
+								<tr>
+									<td>
+										<h3>Ringwood Health and Leisure</h3>
+										Parsonage Barn Lane,<br>
+										Ringwood,<br>
+										BH24 1PX
+									</td>
+									<td class="v-center">
+										Saturday<br>
+										12:15pm - 1:15pm
+									</td>
+									<td class="v-center">
+										<b>A Quiet Swim</b><br>
+										02380 285531<br>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<h3>Avon Heath Country Park</h3>
+										St. Leonards,<br>
+										Ringwood,<br>
+										BH24 2DH
+									</td>
+									<td class="v-center">
+										Everyday<br>
+										11am - 4pm
+									</td>
+									<td class="v-center">
+										<b>A Peaceful Country Walk</b><br>
+										01425 478082<br>
+									</td>
+								</tr>
 							</table>
 						</div>
 					</div>
@@ -543,7 +576,7 @@
 				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 					(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 					m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-				})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+				})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 				ga('create', 'UA-61944834-1', 'auto');
 				ga('send', 'pageview');
